# rhizon-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PHASE14_FREEZE.md  PHASE15_FREEZE.md  README.md  RELEASE_NOTES.md  pyproject.toml  tasks.md
docs/: CONCURRENCY_AND_LOCKING.md  PHASE06_FREEZE.md  PHASE09_FREEZE.md  PHASE11_FREEZE.md  PHASE13_FREEZE.md  PUBLIC_RELEASE_MANIFESTO.md  RUNTIME_INVARIANTS.md  SECURITY_AND_TENANCY.md
openspec/: project.md
openspec/changes/add-distributed-bus-phase12/: change.yaml
openspec/changes/add-maf-adapter-phase09/: change.yaml
openspec/changes/add-multi-agent-phase10/: change.yaml
openspec/changes/add-observability-phase11/: change.yaml
openspec/changes/add-runtime-phase0-foundations/: proposal.md  tasks.md
openspec/changes/add-runtime-phase06-core/: proposal.md  tasks.md
openspec/changes/add-runtime-phase07-managers-ui/: change.yaml
openspec/changes/add-runtime-phase08-eventstore/: change.yaml
openspec/changes/implement-phase0-13-jetstream-durability/: change.yaml
openspec/changes/implement-phase0-14-concurrency-locking/: spec.md
src/rhizon_runtime/adapters/: jetstream_bus.py  jetstream_consumer.py  jetstream_router.py  lock_manager.py  maf.py  nats_bus.py  nats_router.py
tasks/: backlog.md
tests/: test_concurrency.py  test_distributed_nats.py  test_durability_jetstream.py  test_lock_manager.py  test_multi_agent_saga.py  test_runtime_phase06.py  test_security_tenancy.py  test_telemetry.py
tests/adapters/: test_maf.py
tests/core/: test_purity.py
tests/managers/: test_crud.py
(+22 files in other folders)
